--- a/frappe/public/less/mobile.less
+++ b/frappe/public/less/mobile.less
@@ -448,6 +448,9 @@ body {
 					.reply-link {
 						margin-left: 0;
 					}
+					.asset-details {
+						width: calc(~"100% - 30px")
+					}
 				}
 				.avatar-medium {
 				    margin-right: 10px;
